# multi-agent-mlx

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
blog/: more_info.md
examples/: fibonacci.yaml  mnist_mlx.yaml
scenarios/: README.md  generate_visuals.py  run_all.py  run_summary.json
scenarios/scenario_1_calendar/: task.yaml
scenarios/scenario_1_calendar/results/: script.py  summary.json
scenarios/scenario_1_calendar/results/attempt_1/: sheriff_report.txt
scenarios/scenario_1_calendar/results/off-by-one-gauntlet/: summary.json
scenarios/scenario_2_csv/: task.yaml
scenarios/scenario_2_csv/results/: sales_data.csv  script.py  summary.json
scenarios/scenario_2_csv/results/attempt_1/: execution_output.txt  script.py  sheriff_report.txt
scenarios/scenario_2_csv/results/attempt_2/: execution_output.txt  script.py  sheriff_report.txt
scenarios/scenario_2_csv/results/attempt_3/: execution_output.txt  sheriff_report.txt
scenarios/scenario_2_csv/results/csv-detective/: sales_data.csv  script.py  summary.json
scenarios/scenario_3_neural_net/: task.yaml
scenarios/scenario_3_neural_net/results/: model_data.npz  script.py  summary.json
scenarios/scenario_3_neural_net/results/attempt_1/: execution_output.txt  script.py  sheriff_report.txt
src/factory/: __init__.py  cli.py  config.py  models.py  orchestrator.py  server.py
src/factory/agents/: base.py  coder.py  sheriff.py
src/factory/tools/: executor.py  file_io.py
tests/: conftest.py  test_executor.py  test_orchestrator.py  test_tools.py
(+8 files in other folders)
